*Log files and database now use platform-appropriate default locations when not specified.
*Added startup validation that shows helpful messages if there are configuration issues.
*Application will now continue to run even if optional features (logging, external database) fail to initialize.
*Log directories are now created automatically if they don't exist.
*Fixed several minor bugs and improved compatibility with modern Java versions.

1.19 20.11.2006:
*Fixed 'year' parsing exception.
*Added 'ASSUME [SPECIAL] {int}' rule. For padding epno when total is unknown (always true for specials).
*Fixed () issue in tests, for example "IF E(^(Complete Movie|Part \d of \d|OVA)$) DO ADD '%epn '"
*Added english episode name to 'E' test.
*Fixed 'storage field loaded as source field on startup.' (Mylist Options)
*Fixed 'I' test (defined) for 'ver', meaning true if greater than 1.
*Changed 'I' test "syntax"; I(%eng) -> I(eng).
*Fixed and changed truncation; TRUNCATE<{int len},{str end}>. (TRUNCATE<64,...>)
*Fixed db update for postgresql users. To fix 'borked' dbs:
**ALTER TABLE ftb ADD COLUMN len INTEGER NOT NULL DEFAULT 0;
*Added column 'len' to 'Jobs'. (Length in sec)
*Added regexp test to E(pisode) test.
*Added 'TRUNCATE {int max len}' to rules. Will truncate file name if necessary.
*Fixed (removed) the extra k printed in ed2k hash @ info window.
*Fixed stored order of columns in 'Jobs'.
*Added two columns in 'Job' list; mds, mda (missing data flags).
*Added job-list-column-customization to options file.
*Added option 'Auto save'; save options to disk without asking.
*Fixed some minor bugs.
*Some gui changes.

1.18b 21.07.2006:
*Fixed 'Show Info' bug (thx to TechnoMage).
*Back to 1.4 compliance level.
*Added more keyboard mappings (and changed E to X).

1.18 14.07.2006:
*Fixed bug in !mystats (thx to GuntherDW).
*Added more tool tips and changed some text to make WebAOM more understandable.
*Added 'Cancel' button to the 'The options has changed' dialog.