@@ -7,6 +7,8 @@ to time. Do at least check the changelog for relevant info before using it.
 *Added startup validation that shows helpful messages if there are configuration issues.
 *Application will now continue to run even if optional features (logging, external database) fail to initialize.
 *Log directories are now created automatically if they don't exist.
+*Fixed credential loading from saved options - credentials are now properly restored on startup.
+*Fixed login dialog layout - password field no longer stretches incorrectly.
 *Fixed several minor bugs and improved compatibility with modern Java versions.
 
 1.19 20.11.2006:
